unpackaged/objects/Meeting_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Feeback__c</fullName>
        <label>Feeback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Meeting Ratings</relationshipLabel>
        <relationshipName>Meeting_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IMAGE(
IF(TEXT( Feeback__c ) = &apos;0&apos;, &quot;/img/samples/stars_000.gif&quot;,
IF(TEXT(Feeback__c ) = &apos;1&apos;, &quot;/img/samples/stars_100.gif&quot;,
IF(TEXT(Feeback__c ) = &apos;2&apos;, &quot;/img/samples/stars_200.gif&quot;,
IF(TEXT(Feeback__c ) = &apos;3&apos;, &quot;/img/samples/stars_300.gif&quot;,
IF(TEXT(Feeback__c ) = &apos;4&apos;, &quot;/img/samples/stars_400.gif&quot;,
IF(TEXT(Feeback__c ) = &apos;5&apos;, &quot;/img/samples/stars_500.gif&quot;,
&quot;/img/samples/stars_000.gif&quot;
)))))),
&apos;Rating Level&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <label>Meeting Rating</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Meeting Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>